--- a/src/Components/BreadCrumbs/BreadCrumbs.module.css
+++ b/src/Components/BreadCrumbs/BreadCrumbs.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     background-color: antiquewhite;
-    font-size: 30px;
+    font-size: 24px;
+    line-height: 0;
     text-transform: capitalize;
 }
