--- a/src/Components/BreadCrumbs/BreadCrumbs.module.css
+++ b/src/Components/BreadCrumbs/BreadCrumbs.module.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: antiquewhite;
-    font-size: 24px;
+    background-color: rgb(214, 206, 195);
+    font-size: 18px;
     line-height: 0;
     text-transform: capitalize;
+    margin-top: 30px;
 }
